Fix bug that caused slight CLS when jump links used and a section title highlighted

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -129,7 +129,7 @@ h2:target,
 mark,
 .highlight,
 .highlight-links a {
-  margin: 0 -0.4em;
+  margin: -0.1em -0.4em;
   padding: 0.1em 0.4em;
   border-radius: 0.8em 0.3em;
   background: transparent;
